--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,8 @@ dependencies:
   cupertino_icons: ^1.0.2
   image_picker: ^1.0.4
   image: ^4.1.3
+  google_mlkit_face_detection: ^0.12.0
+  google_mlkit_commons: ^0.9.0
 
 
 dev_dependencies:
