--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,9 @@ dependencies:
   image: ^4.1.3
   google_mlkit_face_detection: ^0.12.0
   google_mlkit_commons: ^0.9.0
+  tflite_flutter: ^0.11.0
+  sqflite: ^2.4.1
+  path_provider: ^2.1.5
 
 
 dev_dependencies:
@@ -66,6 +69,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - images/
+    - assets/
 
 
 
